--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,8 +1,8 @@
 name: Hello
 on: push
 jobs: 
-  hello:
-    runs-on: ubuntu-latest
+  hello: # ジョブID
+    runs-on: ubuntu-latest # 実行環境
     steps:
       - run: echo "Hello, world!"
       - uses: actions/checkout@v4
