--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -7,3 +7,4 @@ jobs:
       - run: echo "Hello, world!"
       - uses: actions/checkout@v4
       - run: echo "実行者は${{ github.actor}}です"
+      - run: echo "実行者は${GITHUB_ACTOR}です""
