--- a/.github/workflows/format.yaml
+++ b/.github/workflows/format.yaml
@@ -4,7 +4,7 @@ jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - run: printenv | grep '_FUNC'
+      - run: printenv | grep '_FUNC' # printenvは環境変数を出力するコマンド
         env:
           FORMAT_FUNC: ${{ format('{0}, {1}.', 'Hi', 'world') }} # FORMAT_FUNC=Hi, world.
           JOIN_FUNC: ${{ join(github.event.*.html_url, ', ') }}  # カンマで結合”
